--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-div .container {
- min-height: 100vh;
- display: flex;
- flex-direction: column;
- 
- 
-}
 
 
 nav {
@@ -13,9 +6,16 @@ nav {
   background-color: pink;
 }
 nav a {
-  color: aquamarine;
+  color: green;
   padding: 5px;
+}div .container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 .red {
   color: red;
+}
+#navbar a.active {
+  color: azure;
 }
