--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,45 +1,21 @@
 .Homepage {
   text-align: center;
 }
-.Homepage header {
-  margin-top: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 120px;
+.heading {
+  color: var(---secondary);
+  margin-top: 30px;
+  font-weight: 700;
+  font-size: 50px;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .Homepage h1 {
-  margin-top: 30px;
-  color: var(---secondary);
-  font-family: "Josefin Sans", sans-serif;
   position: relative;
-  font-weight: 700;
-  letter-spacing: 7px;  overflow: hidden;  border-right: 2px solid black;
+
+  letter-spacing: 7px;
+  overflow: hidden;
+  border-right: 2px solid black;
   white-space: nowrap;
-    animation: typewriter 4s steps(30) 1.2s 1 normal both,
+  animation: typewriter 4s steps(30) 1.2s 1 normal both,
     blinkTextCursor 700ms infinite;
-}
-
-/* Base */
-
-h1 {  
-
-}
-
-@keyframes typewriter {
-  from {
-    width: 0;
-  }
-  to {
-    width: 400px;
-  }
-}
-@keyframes blinkTextCursor {
-  from {
-    border-right-color: hsl(0, 0%, 80%);
-  }
-  to {
-    border-right-color: transparent;
-  }
 }
