added framer motion for animations

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root {
   ---base: #f7cc57;
-  ---baselight: #fce9b7;
+  ---baselight: #7fbdc6;
   ---basedark: #ffbb00;
   ---secondary: #ef9191;
 }
