--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,13 @@
 :root {
-  ---base: #f7cc57;
-  ---baselight: #7fbdc6;
-  ---basedark: #ffbb00;
-  ---secondary: #ef9191;
+  ---base: #fffcec;
+  ---baselight: #ee6c6c;
+  ---basedark: #106bb7;
+  ---secondary: #ee6c6c;
 }
 .App {
   max-width: 100%;
-  background-color: #d0eff4;
-}
-div .container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+   background-color: #fffcec;
+
+ 
+
 }
