--- a/src/pages/Aboutme.css
+++ b/src/pages/Aboutme.css
@@ -19,10 +19,13 @@
   text-align: center;
 }
 .Aboutme .aboutmepage h1 {
-      margin-top: 120px;
+  margin-top: 120px;
   font-size: 120px;
   font-weight: 900;
   font-family: "Montserrat", sans-serif;
   color: var(---basedark);
   letter-spacing: -7px;
+}
+.Aboutme .aboutmepage .aboutMeImage {
+height: 220px;
 }
