--- a/src/pages/Aboutme.css
+++ b/src/pages/Aboutme.css
@@ -20,12 +20,22 @@
 }
 .Aboutme .aboutmepage h1 {
   margin-top: 120px;
+
   font-size: 120px;
   font-weight: 900;
   font-family: "Montserrat", sans-serif;
   color: var(---basedark);
   letter-spacing: -7px;
 }
+.Aboutme .aboutmepage .aboutinfotext {
+  margin: 80px;
+  background-color: var(---base);
+}
 .Aboutme .aboutmepage .aboutMeImage {
-height: 220px;
+  background-color: black;
+  height: 320px;
+  filter:sepia(0.2);
+}
+figcaption {
+  background-color: var(---base);
 }
