--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -3,7 +3,7 @@
   color: var(---base);
 }
 .Projects .projectspage {
-    margin-top: -120px;
+  margin-top: -120px;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -13,12 +13,15 @@
   font-size: 120px;
   font-weight: 900;
   font-family: "Montserrat", sans-serif;
- text-align: left;
+  text-align: left;
   letter-spacing: -7px;
 }
 .Projects .projectspage h2 {
-    margin-top: 140px;
-    font-size: 15px;
-     font-weight: 100;
+  margin-top: 140px;
+  font-size: 15px;
+  font-weight: 100;
   text-align: left;
+}
+.Projects .anoutinfotext {
+  font-size: 14;
 }
