--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -20,8 +20,10 @@
   margin-top: 140px;
   font-size: 15px;
   font-weight: 100;
-  text-align: left;
+  text-align: left; letter-spacing: 7px;
 }
+
 .Projects .anoutinfotext {
   font-size: 14;
+  
 }
