--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
   ---base: #fffcec;
   ---baselight: #ee6c6c;
-  ---basedark: #106bb7;
+  ---basedark: #155b95;
   ---secondary: #ee6c6c;
 }
 .App {
