changed image to coded snippet

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
   ---base: #fffcec;
   ---baselight: #ee6c6c;
   ---basedark: #155b95;
-  ---secondary: #ee6c6c;
+  ---secondary: #87B6DD;
 }
 .App {
   max-width: 100%;
    background-color: #fffcec;
 
- 
-
 }
+
+
