--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -113,7 +113,7 @@
   font-size: 20px;
   letter-spacing: 1.5px;
   font-weight: 800;
-  font-family: "Walter Turncoat", cursive;
+  font-family:'Patrick Hand SC', cursive;
   line-height: 35px;
   z-index: 1;
 }
