--- a/src/pages/subpage/Aboutsection.css
+++ b/src/pages/subpage/Aboutsection.css
@@ -30,3 +30,28 @@
   background-color: var(---baselight);
   color: var(---base);
 }
+/* code CODE code */
+.Aboutsection .codeimage {
+  position: relative;
+  margin: 40px 0 0 80px;
+  padding: 90px 0 0 20px;
+  height: 366px;
+  width: 584px;
+  background-image: url("../../media/codelight.png");
+  font-size: 20px;
+  letter-spacing: 1.5px;
+  font-weight: 800;
+  font-family: "Patrick Hand SC", cursive;
+  line-height: 35px;
+  z-index: 1;
+}
+.Aboutsection .codeimage .colorone {
+  color: var(---basedark);
+}
+.Aboutsection .codeimage .colortwo {
+  color: var(---baselight);
+}
+.Aboutsection .codeimage .colorthree {
+  color: var(---secondary);
+}
+/*  */
