--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -1,12 +1,31 @@
-.Contact .fishimage {
-  position: relative;
-  top: 100px;
-  left: 40px;
-  height: 60px;
+.Contact {
+  background-color: var(---base);
 }
-.Contact h1 {  
+.Contact .contactpage {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  text-align: center;
+}
+.Contact .contactpage h1 {
+  margin: 0px 0 40px 10px;
   font-size: 120px;
+  color: var(---basedark);
   font-weight: 900;
   font-family: "Montserrat", sans-serif;
-  color: var(---basedark);
-  letter-spacing: -7px;}
+  text-align: left;
+  letter-spacing: -7px;
+}
+.Contact .contactpage .contactbox {
+  width: fit-content;
+  margin: 0 120px ;
+  border: 3px solid var(---basedark);
+}
+.Contact .contactpage ul {
+  margin: 0;
+  padding: 10px 20px 5px 20px;
+  list-style: none;
+  text-align: left;
+  line-height: 3;
+  font-size: 20px;
+}
