--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -1,29 +1,30 @@
 .Projects {
   background-color: var(---basedark);
-  color: var(---base);
 }
 .Projects .projectspage {
-  margin-top: -120px;
+  margin-top: -140px;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   text-align: center;
 }
 .Projects .projectspage h1 {
+  margin: 140px 0 80px 10px;
+
   font-size: 120px;
+  color: var(---base);
   font-weight: 900;
   font-family: "Montserrat", sans-serif;
   text-align: left;
   letter-spacing: -7px;
 }
-.Projects .projectspage h2 {
-  margin-top: 140px;
-  font-size: 15px;
-  font-weight: 100;
-  text-align: left; letter-spacing: 7px;
-}
+.Projects .card {
+  max-width: 280px;
+  display: inline-block;
+  background-color: var(---base);
+  padding: 20px;
 
-.Projects .anoutinfotext {
-  font-size: 14;
-  
+  margin-bottom: 40px;
+  outline: 5px solid var(---baselight);
+  outline-offset: -10px;
 }
