--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -38,7 +38,6 @@
 }
 .Home .hero h2 {
   font-size: 50px;
-  color: var(---baselight);
 }
 .Home .hero h3 {
   font-size: 40px;
@@ -53,19 +52,14 @@
   box-shadow: 2px 1px 5px 1px #4e59612f;
   background-color: var(---base);
   font-size: 20px;
+  font-weight: 100;
+  letter-spacing: 2px;
   color: var(---basedark);
   transition: all 0.4s ease;
-}
-.Home .hero a {
-  color: var(---basedark);
-  text-decoration: none;
-  transition: all 0.3s ease;
 }
 
 .Home .hero button:hover {
   background-color: var(---baselight);
-  color: var(---base);
-}
-.Home .hero a:hover {
+  border: none;
   color: var(---base);
 }
