--- a/src/pages/subpage/Popup.css
+++ b/src/pages/subpage/Popup.css
@@ -1,3 +1,4 @@
+/* CSS checked O unchecked X */
 .Popup {
   position: fixed;
   top: 0;
@@ -12,12 +13,15 @@
 
 .popup-inner {
   position: relative;
-  padding: 32px;
+  padding: 5px;
   width: 100%;
-  max-width: 500px;
-  background-color: yellow;
+  max-width: 80%;
+  background-color: var(---base);
+  border: 12px double var(---baselight);
 }
 .popup-inner .close-btn {
-    position: absolute;
-    top: 16px;right: 16px;
+  position: absolute;
+  top: 16px;
+  right: 16px;
 }
+
