--- a/src/pages/Cv.css
+++ b/src/pages/Cv.css
@@ -6,15 +6,52 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  text-align: center;
+  text-align: left;
 }
 .Cv .downloadbutton {
   display: block;
   margin: 20px auto;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 2px 1px 5px 1px #4e59612f;
+  background-color: var(---basedark);
+  font-size: 20px;
+  font-weight: 100;
+  letter-spacing: 2px;
+  color: var(---base);
+  transition: all 0.4s ease;
+}
+.Cv .downloadbutton:hover {
+  background-color: var(---baselight);
+
+  color: var(---base);
 }
 .Cv main {
-  background-color: white;
-  /* border: 1px solid; */
+  background-color: #fdfcf4;
+
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.295);
   margin: 15px 80px;
+}
+.Cv h1 {
+  margin-top: px;
+  font-size: 100px;
+  font-weight: 900;
+  font-family: "Montserrat", sans-serif;
+  color: var(---basedark);
+  letter-spacing: -7px;
+}
+.Cv .subheader {
+  margin-left: 7px;
+  font-size: 20px;
+
+  letter-spacing: 2px;
+  color: var(---basedark);
+}
+.Cv .highlightred {
+  margin-left: 7px;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  color: var(---baselight);
 }
