--- a/src/pages/Cv.css
+++ b/src/pages/Cv.css
@@ -1,3 +1,4 @@
+/* CSS checked O unchecked X */
 .Cv {
   background-color: var(---base);
 }
@@ -14,12 +15,13 @@
   padding: 5px 10px;
   border: none;
   border-radius: 10px;
-  box-shadow: 2px 1px 5px 1px #4e59612f;
+  box-shadow: 2px 1px 5px 1px #141c213b;
   background-color: var(---basedark);
   font-size: 20px;
   font-weight: 100;
   letter-spacing: 2px;
   color: var(---base);
+  text-decoration: none;
   transition: all 0.4s ease;
 }
 .Cv .downloadbutton:hover {
